--- a/raconteur/RCSlideEditorView.xib
+++ b/raconteur/RCSlideEditorView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5056"/>
     </dependencies>
@@ -13,12 +13,12 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
         <customView id="c22-O7-iKe">
-            <rect key="frame" x="0.0" y="0.0" width="663" height="410"/>
+            <rect key="frame" x="0.0" y="0.0" width="656" height="410"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="re3-TF-vuL">
+                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" id="re3-TF-vuL">
                     <rect key="frame" x="8" y="20" width="417" height="370"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <textFieldCell key="cell" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" drawsBackground="YES" id="Awk-e2-IkH">
                         <font key="font" size="20" name="Courier"/>
                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
@@ -33,14 +33,14 @@
                         <outlet property="delegate" destination="-2" id="Cyz-aS-zJg"/>
                     </connections>
                 </textField>
-                <box autoresizesSubviews="NO" misplaced="YES" title="Properties" boxType="oldStyle" borderType="line" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="VQC-uQ-J6Y">
+                <box autoresizesSubviews="NO" title="Properties" boxType="oldStyle" borderType="line" titlePosition="noTitle" id="VQC-uQ-J6Y">
                     <rect key="frame" x="433" y="20" width="210" height="370"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" heightSizable="YES"/>
                     <view key="contentView">
                         <rect key="frame" x="1" y="1" width="208" height="368"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HMB-v0-isu">
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="HMB-v0-isu">
                                 <rect key="frame" x="13" y="336" width="69" height="17"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Alignment" id="Yaz-Bz-raj">
@@ -49,7 +49,7 @@
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
-                            <popUpButton verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nkH-l7-9Kk">
+                            <popUpButton verticalHuggingPriority="750" id="nkH-l7-9Kk">
                                 <rect key="frame" x="13" y="304" width="183" height="26"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="seO-fR-SLx">
@@ -64,7 +64,7 @@
                                     <binding destination="-2" name="selectedValue" keyPath="self.currentSlide.options.textAlignment" previousBinding="5xA-bI-66h" id="ojh-MU-gxg"/>
                                 </connections>
                             </popUpButton>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mcz-rS-zzN">
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="mcz-rS-zzN">
                                 <rect key="frame" x="13" y="267" width="78" height="17"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Foreground" id="Hov-YT-wFG">
@@ -73,7 +73,7 @@
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="leQ-8Z-JpW">
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="leQ-8Z-JpW">
                                 <rect key="frame" x="13" y="236" width="79" height="17"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Background" id="rTJ-2X-3KW">
@@ -82,7 +82,7 @@
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
-                            <colorWell fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CRb-PX-u3d">
+                            <colorWell id="CRb-PX-u3d">
                                 <rect key="frame" x="149" y="264" width="44" height="23"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <color key="color" red="0.05813049898" green="0.055541899059999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -90,7 +90,7 @@
                                     <binding destination="-2" name="value" keyPath="currentSlide.options.foregroundColor" id="kpf-0M-zIN"/>
                                 </connections>
                             </colorWell>
-                            <colorWell fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="F99-Tm-4UO">
+                            <colorWell id="F99-Tm-4UO">
                                 <rect key="frame" x="149" y="233" width="44" height="23"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <color key="color" red="0.05813049898" green="0.055541899059999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -100,22 +100,10 @@
                             </colorWell>
                         </subviews>
                     </view>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="210" id="3bS-oW-1gk"/>
-                    </constraints>
                     <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
                     <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </box>
             </subviews>
-            <constraints>
-                <constraint firstItem="re3-TF-vuL" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" constant="8" id="8a6-UP-twI"/>
-                <constraint firstAttribute="bottom" secondItem="re3-TF-vuL" secondAttribute="bottom" constant="20" id="TeC-cf-fvl"/>
-                <constraint firstItem="VQC-uQ-J6Y" firstAttribute="leading" secondItem="re3-TF-vuL" secondAttribute="trailing" constant="8" id="YCB-Yy-3Rd"/>
-                <constraint firstItem="VQC-uQ-J6Y" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" constant="20" id="ZpG-oL-53N"/>
-                <constraint firstItem="re3-TF-vuL" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" constant="20" id="daV-U5-81q"/>
-                <constraint firstAttribute="bottom" secondItem="VQC-uQ-J6Y" secondAttribute="bottom" constant="20" id="hdm-jC-yMc"/>
-                <constraint firstAttribute="trailing" secondItem="VQC-uQ-J6Y" secondAttribute="trailing" constant="20" id="tdX-Zd-EIM"/>
-            </constraints>
         </customView>
         <userDefaultsController representsSharedInstance="YES" id="F5b-H4-9l5"/>
         <dictionaryController objectClassName="_NSControllerKeyValuePair" automaticallyPreparesContent="YES" id="xee-oH-ezP">
