--- a/raconteur/Base.lproj/MainMenu.xib
+++ b/raconteur/Base.lproj/MainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5056"/>
     </dependencies>
@@ -117,9 +117,9 @@
                         </items>
                     </menu>
                 </menuItem>
-                <menuItem title="Slides" id="roc-eM-Lgk">
+                <menuItem title="Slide" id="roc-eM-Lgk">
                     <modifierMask key="keyEquivalentModifierMask"/>
-                    <menu key="submenu" title="Slides" id="dQN-8S-5PN">
+                    <menu key="submenu" title="Slide" id="dQN-8S-5PN">
                         <items>
                             <menuItem title="Add slide" keyEquivalent="n" id="cR8-7h-3Ig">
                                 <connections>
@@ -135,6 +135,17 @@
                                 <connections>
                                     <action selector="removeSelectedSlide:" target="Voe-Tx-rLC" id="OLD-20-caO"/>
                                     <binding destination="Voe-Tx-rLC" name="enabled" keyPath="self.mainController.project.slides" id="Lha-WQ-BsL">
+                                        <dictionary key="options">
+                                            <string key="NSValueTransformerName">NSIsNotNil</string>
+                                        </dictionary>
+                                    </binding>
+                                </connections>
+                            </menuItem>
+                            <menuItem title="Edit Master Slide" id="n4o-jf-UJm">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                                <connections>
+                                    <action selector="editMasterSlide:" target="Voe-Tx-rLC" id="ykq-Cd-Jya"/>
+                                    <binding destination="Voe-Tx-rLC" name="enabled" keyPath="self.mainController.project" id="ZJJ-7g-lcI">
                                         <dictionary key="options">
                                             <string key="NSValueTransformerName">NSIsNotNil</string>
                                         </dictionary>
